syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "UserClient";

message UserInfo {
  string id = 1;
  string nickname = 2;
  google.protobuf.Timestamp registration_date = 3;
  google.protobuf.StringValue avatar_id = 4;
}

message UserInfoRequest {
  string id = 1;
}

message UserInfoReply {
  UserInfo user = 1;
}

message UsersInfoRequest {
  repeated string ids = 1;
}

message UsersInfoReply {
  repeated UserInfo users = 1;
}

service UserMicroservice {
  rpc GetUserInfo (UserInfoRequest) returns (UserInfoReply);
  rpc GetUsersInfo (UsersInfoRequest) returns (UsersInfoReply);
}